--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 
 		<div class="doc-section" id="life">
 			<h3>Mi Vida</h3>
-			<p>vivo en la ciudad de mosquera-Cundinamarca, actualmente me encuentro viviendo con mi madre, tengo un hermano mayor de 29 años el es psicologo y muy buen hermano, mi padre se encuentra en la ciudad de ibagué es un padre muy comprensivo y bondadoso.</p>
+			<p>vivo en la ciudad de Ibagué-Tolima, actualmente me encuentro viviendo con mi madre, tengo un hermano mayor de 29 años el es psicologo y muy buen hermano, mi padre se encuentra en la ciudad de ibagué es un padre muy comprensivo y bondadoso.</p>
 
 			<p>Me gusta mucho los animes y los video juegos en linea, de hecho eh competido en varios torneos a nivel nacional de league of legends</p>
 
 			<p>
 <p align="justify">Soy  responsable, honesto, con capacidad para la resolución de conflictos, proactivo, entusiasta y dinámico, con aspiraciones, deseos de superación y metas basadas en el logro de objetivos.
- cuento con la experiencia obtenida en el desarrollo de los diferentes programas académicos de la carrera dentro del plan curricular de la Ingeniería, así como el Técnico en Programación de Software 3 trimestre (cursando), y tengo un buen manejo del idioma inglés.
+ cuento con la experiencia obtenida en el desarrollo de los diferentes programas académicos de la carrera dentro del plan curricular de la Ingeniería, así como el Técnico en Programación de Software, y tengo un buen manejo del idioma inglés.
     Dispuesto a cumplir con las distintas funciones, obligaciones y normas laborales que tengan establecidas, me presento con gran entusiasmo a su entidad..</p>
 
 			
@@ -96,7 +96,7 @@
         <div class="doc-section" id="contact">
             <h3>Contacto</h3>
 			<p>Ingeniero De sistemas<br/>
-				<span style="FONT-WEIGHT: bold">Dirección:</span> Carrera 10 #15a-73 barrio Villa Marcela - Mosquera, Bogotá, Colombia<br>
+				<span style="FONT-WEIGHT: bold">Dirección:</span> Barrio Santa Ana - Ibagué -Tolima<br>
 				
 				<span style="FONT-WEIGHT: bold">Email:</span>&nbsp;&nbsp;yeison_077@hotmail.com
                 <br>
