--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h3>Acerca De Mi</h3>
             Yo soy estudiante de ingenieria de sistemas.
 			Me gusta mucho la programacion, las nuevas tecnologias.
-			soy apasionado en lo que hago, y me gusta hacer bien las cosas, actualmente estudio un curso de programacion en el SENA el cual me ayuda a mejorar mis conocimientos.
+			soy apasionado en lo que hago, y me gusta hacer bien las cosas, actualmente trabajo de freelance en proyectos que surjan para realizar desarrollos sobre paginas web o programas.
 			<br />
         
         </div>
@@ -81,7 +81,7 @@
 			<h3>Mi Vida</h3>
 			<p>vivo en la ciudad de Ibagué-Tolima, actualmente me encuentro viviendo con mi madre, tengo un hermano mayor de 29 años el es psicologo y muy buen hermano, mi padre se encuentra en la ciudad de ibagué es un padre muy comprensivo y bondadoso.</p>
 
-			<p>Me gusta mucho los animes y los video juegos en linea, de hecho eh competido en varios torneos a nivel nacional de league of legends</p>
+			<p>Me gusta mucho leer y hacer deporte, lo cual nos lleva a mejorar nuestros habitos y forma de pensar.</p>
 
 			<p>
 <p align="justify">Soy  responsable, honesto, con capacidad para la resolución de conflictos, proactivo, entusiasta y dinámico, con aspiraciones, deseos de superación y metas basadas en el logro de objetivos.
